--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,9 @@ lto = true      # Futher assist in optimization
 opt-level = 0   # Default no optimization
 
 [dependencies]
-git2 = { version = "0.13.*", default = false, features = ["https"] }
+git2 = "0.13.*"
+fungus = "0.1.*"
+indicatif = "0.15.*"
 
 # Examples and tests are built with these dependencies
 [dev-dependencies]
